# llm-from-scratch

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  modal_demo.py  multihead_attention.py  pyproject.toml  pyrightconfig.json
article/: part1_bpe_tokenizer.md  part2_transformer.md  part3_translation_task.md  part4_gpt2.md
block/: decoder.py  encoder.py  gpt_block.py  llama_block.py
component/: attention.py  feed_forward.py  feed_forward_swiglu.py  multihead_attention.py  positional_embedding.py  positional_encoding.py  rms_norm.py  rotary_embedding.py  token_embedding.py  tokenizer.py
data/: translation_dataset.py
image/generator/: visualize_attention.py  visualize_positional_encoding.py  visualize_token_embedding.py
layer/: decoder_layer.py  encoder_layer.py  gpt_layer.py  llama_layer.py
model/: gpt.py  llama.py  transformer.py
notebooks/: train_llama_colab.ipynb  train_llama_kaggle.ipynb
playground/: decoding_method.py
public/: bsd_translation_eval_results.csv
scripts/: build_test_dataset.py  config.py  eval.py  generate.py  hub.py  inference.py  lightning_module.py  prepare.py  prepare_local.py  pull.py  test_tokenizers.py  test_translation_dataset.py  train.py  train_local.py  train_on_modal.py  train_tokenizers.py  translate.py  visualize_model.py
scripts/wihtout_hf/: prepare.py
test/block/: test_decoder.py  test_encoder.py  test_gpt_block.py
test/component/: test_attention.py  test_bpe_tokenizer.py  test_feed_forward.py  test_multihead_attention.py  test_positional_encoding.py  test_rms_norm.py  test_rotary_embedding.py  test_token_embedding.py  test_tokenizer.py
test/layer/: test_decoder_layer.py  test_encoder_layer.py  test_gpt_layer.py
test/model/: test_gpt.py  test_transformer.py
test/tokenizer/: test_bpe_tokenizer.py
test/utils/: test_collate.py  test_masking.py
tokenizer/: bpe.py  bpe_tokenizer.py
torch-tutorial/: 0_quickstart.py
utils/: collate.py  decoding_strategy.py  evaluation_pipeline.py  hf_hub.py  inference.py  inference_pipeline.py  masking.py  training_pipeline.py
