[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "huggingface-hub>=1.1.4",
    "matplotlib>=3.10.7",
    "modal>=1.2.2",
    "python-dotenv>=1.2.1",
    "regex>=2025.11.3",
    "tokenizers>=0.22.1",
    "torch>=2.5.0; sys_platform == 'darwin'",
    "torch>=2.5.0; sys_platform == 'linux'",
    "torch>=2.5.0; sys_platform == 'win32'",
    "torchinfo>=1.8.0",
    "torchvision>=0.20.0; sys_platform == 'darwin'",
    "torchvision>=0.20.0; sys_platform == 'linux'",
    "torchvision>=0.20.0; sys_platform == 'win32'",
    "tqdm>=4.67.1",
    "wandb>=0.23.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
