[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "lightning>=2.6.0",
    "matplotlib>=3.10.7",
    "modal>=1.2.2",
    "python-dotenv>=1.2.1",
    "regex>=2025.11.3",
    "sacrebleu[ja]>=2.5.1",
    "tokenizers>=0.22.1",
    "torch>=2.5.0; sys_platform == 'darwin'",
    "torchinfo>=1.8.0; sys_platform == 'darwin'",
    "torchvision>=0.20.0; sys_platform == 'darwin'",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "typer>=0.20.0",
    "wandb>=0.23.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
